Fixed nav arrow spacing

--- a/theme/obsidian/obsidian.less
+++ b/theme/obsidian/obsidian.less
@@ -73,8 +73,7 @@ body{
 	position:absolute;
 	top:50%;
 	margin-top:-20px;
-	padding:10px 15px;
-	.border-radius(3px);
+	padding:10px 10px;
 	@transition: all 200ms ease-in-out;
 	.transition(@transition);
 	img{
@@ -86,10 +85,10 @@ body{
 	}
 }
 #ss-next{
-	right:-5px;
+	right:0;
 }
 #ss-prev{
-	left:-5px;
+	left:0;
 }
 
 
